--- a/textbook_app/templates/textbook_app/index.html
+++ b/textbook_app/templates/textbook_app/index.html
@@ -1,10 +1,18 @@
 {% extends 'textbook_app/base_template.html' %}
 
 {% block content %}
-  <h1>Available Books</h1>
+  <h1>Books Currently Available</h1>
   <ul>
     {% for book in available_books %}
-      <li><a href="{% url 'book-detail' book.book.id %}">{{ book.book.title }}</a></li>
+      <li>
+        <a href="{% url 'book-detail' book.book.id %}">
+          {{ book.book.title }}</a> by {{ book.book.author }}
+          <br>     - Offered by: 
+        <a href="{{ book.user.get_absolute_url }}">
+          {{ book.user.name }}
+        </a>
+        <p>
+      </li>
     {% endfor %}
   </ul>
 {% endblock %}
