--- a/textbook_app/templates/textbook_app/book_confirm_delete.html
+++ b/textbook_app/templates/textbook_app/book_confirm_delete.html
@@ -1,11 +1,18 @@
 {% extends 'textbook_app/base_template.html' %}
-
 {% block content %}
-<h1>Confirm Deletion</h1>
-<p>Are you sure you want to delete the book "{{ book.title }}"?</p>
+<h1>
+    Confirm Deletion
+</h1>
+<p>
+    Are you sure you want to delete the book "{{ book.title }}"?
+</p>
 <form method="post">
     {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Delete</button>
+    <button type="submit" class="btn btn-danger">
+        Delete
+    </button>
 </form>
-<a href="{% url 'book-detail' pk=book.pk %}" class="btn btn-secondary">Cancel</a>
+<a href="{% url 'book-detail' pk=book.pk %}" class="btn btn-secondary">
+    Cancel
+</a>
 {% endblock %}
