--- a/textbook_app/templates/textbook_app/user_list.html
+++ b/textbook_app/templates/textbook_app/user_list.html
@@ -16,4 +16,8 @@
     There are no users registered.
 </p>
 {% endif %}
+<form action="{% url 'user-add' %}" method="post">
+    {% csrf_token %}
+    <input type="submit" value="Add New User">
+</form>
 {% endblock %}
