--- a/textbook_app/templates/textbook_app/book_add.html
+++ b/textbook_app/templates/textbook_app/book_add.html
@@ -1,10 +1,14 @@
 {% extends 'textbook_app/base_template.html' %}
 
 {% block content %}
-  <h1>Add a New Book</h1>
-  <form method="post">
+<h1>
+    Add a New Book
+</h1>
+<form method="post">
     {% csrf_token %}
-    {{ form.as_p }}  <!-- Renders the form fields as paragraphs -->
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">
+        Submit
+    </button>
+</form>
 {% endblock %}
