--- a/textbook_app/templates/textbook_app/book_edit.html
+++ b/textbook_app/templates/textbook_app/book_edit.html
@@ -1,10 +1,14 @@
 {% extends 'textbook_app/base_template.html' %}
 
 {% block content %}
-<h1>Edit Book</h1>
+<h1>
+    Edit Book
+</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Save Changes</button>
+    <button type="submit" class="btn btn-primary">
+        Save Changes
+    </button>
 </form>
 {% endblock %}
