--- a/textbook_app/templates/textbook_app/base_template.html
+++ b/textbook_app/templates/textbook_app/base_template.html
@@ -15,7 +15,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <img src="{% static 'images/textbookexchangelogo2.png' %}" height="100">
+                <img src="{% static 'images/textbookexchangelogo2.png' %}" height="100" alt="Textbook Exchange Logo featuring an open book">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon">
 
@@ -47,3 +47,4 @@
         {% endblock %}
     </body>
 </html>
+
